--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,24 +1,24 @@
 .canvas-component {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
-  margin: auto 100px;
+  margin: 20px;
   height: auto;
 }
 
 .controls-panel {
   display: flex;
-  flex-flow: row wrap;
-  flex: 1 1 100%;
+  flex-direction: column;
+  flex: 1;
   max-width: 100%;
   justify-content: flex-start;
-  align-items: center;
   min-height: 40px;
 }
 
 .circles-container {
   display: flex;
+  flex: 1;
   flex-flow: row wrap;
   justify-content: flex-start;
   align-items: flex-start;
@@ -27,9 +27,9 @@
 
 .projects-container {
   display: flex;
-  flex-flow: row wrap;
+  flex: 1;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
   min-height: 40px;
 }
 
@@ -42,15 +42,21 @@
 }
 
 .circles-container.container-100 {
-  width: 280px;
+  flex-basis: 250px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .circles-container.container-225 {
-  width: 420px;
+  flex-basis: 375px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .container-400 {
-  width: 560px;
+  flex-basis: 500px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .button-generate {
@@ -89,9 +95,9 @@
 }
 
 .button-reset {
-  margin-left: 10px;
+  /* margin-left: 10px; */
 }
 
 .button-fill-all {
-  margin-left: 10px;
+  /* margin-left: 10px; */
 }
