--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bulma/css/bulma.min.css";
+
+html {
+    background: no-repeat linear-gradient(180deg, #3e8ed0, transparent);
+    background-size: cover;
+    min-height: 100vh;
+}
